# colcon-python-naming

./: .gitignore  README.rst  setup.cfg
colcon_python_naming/: __init__.py
