[metadata]
name = colcon-python-naming
version = attr: colcon_python_naming.__version__
author = Mike Purvis
author_email = mpurvis@clearpath.ai
maintainer = Mike Purvis
maintainer_email = mpurvis@clearpath.ai
description = Augment python packages with their rosdep names.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
zip_safe = true

[options.entry_points]
colcon_core.package_augmentation =
    python_naming = colcon_python_naming:PythonPackageRenamer
